chore: API changes for integration + helm improvement
